fixed overflow

--- a/andrew-mccall/themes/somrat/assets/css/custom.css
+++ b/andrew-mccall/themes/somrat/assets/css/custom.css
@@ -23,9 +23,8 @@
     }
 }
 
-html,
-body {
-    overflow-x: hidden;
+.contact {
+    overflow-x: hidden !important;
 }
 
 .mobile-menu-img {
